2009-11-23  Gary Benson  <gbenson@redhat.com>

	* contrib/jck/compile-native-code.sh: Support s390x.

2009-11-18  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-shark.patch
	(hotspot/src/share/vm/utilities/macros.hpp):
	IA64 is NOT_X86.

2009-11-18  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/bytecodeInterpreter_zero.hpp:
	* ports/hotspot/src/cpu/zero/vm/methodHandles_zero.cpp:
	* ports/hotspot/src/cpu/zero/vm/sharedRuntime_zero.cpp:
	Non-code cleanups to better match upstream Zero.

2009-11-12  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkMemoryManager.cpp
	(SharkMemoryManager::getDlsymTable): Made dependent on the LLVM version
	to be buildable with LLVM 2.7svn r86606 and later.
	(SharkMemoryManager::SetDlsymTable): Likewise.
	* ports/hotspot/src/share/vm/shark/sharkMemoryManager.hpp
	(SharkMemoryManager::getDlsymTable): Likewise.
	(SharkMemoryManager::SetDlsymTable): Likewise.

2009-11-12  Xerxes Rånby  <xerxes@zafena.se>

	* patches/icedtea-shark.patch
	(hotspot/src/share/vm/utilities/macros.hpp):
	Added NOT_X86 macro.

2009-11-11  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/cppInterpreter_zero.cpp
	(CppInterpreter::native_entry): Add invocation counting for
	non-synchronized native methods.

	* ports/hotspot/src/cpu/zero/vm/sharedRuntime_zero.cpp
	(SharedRuntime::generate_native_wrapper): Implemented.

	* ports/hotspot/src/cpu/zero/vm/sharkFrame_zero.hpp
	(SharkFrame): Made friendly with SharkStack.  Snubbed
	SharkFunction.

	* ports/hotspot/src/share/vm/shark/sharkBuilder.hpp
	(SharkBuilder::SharkBuilder): Removed module argument.
	(SharkBuilder::_module): Removed.
	(SharkBuilder::module): Likewise.
	(SharkBuilder::check_special_condition_for_native_trans): New method.
	(SharkBuilder::CreateInlineOop): New method with jobject argument.
	* ports/hotspot/src/share/vm/shark/sharkBuilder.cpp
	(SharkBuilder::SharkBuilder): Removed module argument, and changed