@@ -1,3 +1,10 @@
+2009-11-25  Gary Benson  <gbenson@redhat.com>
+
+	* ports/hotspot/src/cpu/zero/vm/entry_zero.hpp 
+	(ZeroEntry::entry_point): Removed explicit inline.
+	(ZeroEntry::invoke): Likewise.
+	(ZeroEntry::invoke_osr): Likewise.
+
 2009-11-23  Gary Benson  <gbenson@redhat.com>
 
 	* contrib/jck/compile-native-code.sh: Support s390x.
